--- a/growabeard/static/css/growabeard.css
+++ b/growabeard/static/css/growabeard.css
@@ -10,7 +10,6 @@ body {
 .main-content {
     width: 80%;
     margin: 50px auto;
-    padding-top: 40px;
 }
 
 
@@ -121,4 +120,40 @@ form .helptext {
     font-size: 12px;
     color: #767676;
     margin: 4px 0 2px;
+}
+
+.campaign-entries .member-entries {
+    clear: both;
+}
+
+.campaign-entries .user-details {
+    font-size: 120%;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.campaign-entries .entries {
+}
+
+.campaign-entries .entry {
+    float: left;
+    vertical-align: top;
+    margin: 0;
+    padding: 0;
+    width: 100px;
+    height: 100px;
+}
+
+.campaign-entries .entry img {
+    width: 100px;
+    height: 100px;
+    margin: 0;
+    padding: 0;
+}
+
+.campaign-entries .img-placeholder {
+    width: 100%;
+    height: 100%;
+    font-size: 150%;
+    color: #ccc;
 }
