--- a/growabeard/static/css/growabeard.css
+++ b/growabeard/static/css/growabeard.css
@@ -122,38 +122,65 @@ form .helptext {
     margin: 4px 0 2px;
 }
 
-.campaign-entries .member-entries {
-    clear: both;
+.user-avatar {
+    margin: auto;
+    width: 50px;
+    height: 50px;
+    background: #999;
+    border-radius: 50%;
+    font-size: 11px;
+    text-transform: uppercase;
+    padding-top: 16px;
+    color: #fff;
 }
 
-.campaign-entries .user-details {
-    font-size: 120%;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.campaign-entries .entries {
-}
-
-.campaign-entries .entry {
-    float: left;
-    vertical-align: top;
-    margin: 0;
-    padding: 0;
-    width: 100px;
-    height: 100px;
-}
-
-.campaign-entries .entry img {
-    width: 100px;
-    height: 100px;
-    margin: 0;
-    padding: 0;
-}
-
-.campaign-entries .img-placeholder {
+.campaign-entries {
+    margin: 20pt 20pt;
     width: 100%;
-    height: 100%;
-    font-size: 150%;
-    color: #ccc;
+    border-collapse: collapse;
 }
+
+.campaign-entries thead {
+    border-bottom: 1px solid #ddd;
+}
+
+.campaign-entries th,
+.campaign-entries td {
+    padding: 5px;
+    font-weight: normal;
+}
+
+.campaign-entries th {
+    vertical-align: top;
+}
+
+.campaign-day-date {
+    text-align: left;
+}
+
+.campaign-entry {
+    width: 80px;
+    height: 100px;
+}
+
+.campaign-entry img {
+    width: 80px;
+    height: 100px;
+    border-radius: 10px;
+}
+
+.campaign-date-row {
+}
+
+.campaign-date-row.today {
+    background: #efefef;
+}
+
+.campaign-date-row.today .campaign-day-date {
+    font-weight: bold;
+}
+
+.campaign-date-row.future {
+    opacity: 0.5;
+}
+
