Add some basic JS URL navigation

--- a/growabeard/templates/beard-details.html
+++ b/growabeard/templates/beard-details.html
@@ -1,5 +1,5 @@
 {% load thumbnail %}
-<div class="beard-details-card">
+<div class="beard-details-card" data-entry-id="{{ entry.id }}">
     <div class="image-big">
         <img src="{{ entry.file.url }}" />
     </div>
